Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-122112

Setting polar axis on for Bars3D causes a crash on Windows

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • None
    • 6.7
    • Graphs: 3D
    • None
    • 1e4f53a6e (dev), e27f7c66e (6.7)

    Description

      Setting polar to true causes a crash on Windows.

      Commented-out autotest in bars/tst_basic.qml

      Attachments

        For Gerrit Dashboard: QTBUG-122112
        # Subject Branch Project Status CR V

        Activity

          People

            oulu_hillbilly Sami Varanka
            tokorpip Tomi Korpipää
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes