Warn about using polar with bars

In addtion uncomment crashing test.

Task-number: QTBUG-122112
Pick-to: 6.7
Change-Id: Ib5b58ea556f6dfb956737b2af49783746655af3a
Reviewed-by: Sakaria Pouke <sakaria.pouke@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>